Fixed align-items.

--- a/src/components/LoginPage/LoginPage.scss
+++ b/src/components/LoginPage/LoginPage.scss
@@ -18,7 +18,7 @@
     &__fields {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
     }
 
     &__divider {
